Initial commit - Library Management System

--- a/LibraryManagement/appsettings.json
+++ b/LibraryManagement/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-DASLLN7;Database=LibraryDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=SOHAIB-PC;Database=LibraryDB;Trusted_Connection=True;TrustServerCertificate=True;"
 },
     "Logging": {
       "LogLevel": {
